[gd_scene load_steps=16 format=2]

[ext_resource path="res://Assets/Astronaut/jet1.png" type="Texture" id=1]
[ext_resource path="res://Assets/Astronaut/jet2.png" type="Texture" id=2]
[ext_resource path="res://Assets/Astronaut/6.png" type="Texture" id=3]
[ext_resource path="res://Assets/Astronaut/0.png" type="Texture" id=4]
[ext_resource path="res://Assets/Astronaut/7.png" type="Texture" id=5]
[ext_resource path="res://Assets/Astronaut/2.png" type="Texture" id=6]
[ext_resource path="res://Assets/Astronaut/3.png" type="Texture" id=7]
[ext_resource path="res://Assets/Astronaut/5.png" type="Texture" id=8]
[ext_resource path="res://Assets/Astronaut/1.png" type="Texture" id=9]
[ext_resource path="res://Assets/Astronaut/4.png" type="Texture" id=10]
[ext_resource path="res://src/Actors/Player.gd" type="Script" id=11]
[ext_resource path="res://Assets/Astronaut/jet3.png" type="Texture" id=12]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ), ExtResource( 12 ) ],
"loop": false,
"name": "jet",
"speed": 7.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "stay",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 9 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 10 ), ExtResource( 8 ), ExtResource( 3 ), ExtResource( 5 ) ],
"loop": true,
"name": "walk",
"speed": 9.0
} ]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 119, 242.5 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 134.75, 262 )

[node name="Player" type="KinematicBody2D"]
scale = Vector2( 0.25, 0.25 )
collision_mask = 142
script = ExtResource( 11 )
speed = Vector2( 625, 1000 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 1.4, 1.4 )
drag_margin_left = 0.0
drag_margin_right = 0.0

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -2 )
frames = SubResource( 4 )
animation = "jet"

[node name="Gun" type="Sprite" parent="."]
position = Vector2( 100, 35 )
scale = Vector2( 0.55, 0.55 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="."]
position = Vector2( -12, -4 )
shape = SubResource( 5 )

[node name="EnemyCollider" type="Area2D" parent="."]
collision_mask = 130

[node name="CollisionShape2D2" type="CollisionShape2D" parent="EnemyCollider"]
position = Vector2( -16, -4 )
shape = SubResource( 6 )

[node name="JumpCast" type="RayCast2D" parent="."]
position = Vector2( -3, 237 )
enabled = true
collision_mask = 10

[node name="GunEjectRight" type="Position2D" parent="."]
position = Vector2( 300, -400 )

[node name="GunEjectLeft" type="Position2D" parent="."]
position = Vector2( -300, -400 )

[node name="GunShootRight" type="Position2D" parent="."]
position = Vector2( 446, 0 )

[node name="GunShootLeft" type="Position2D" parent="."]
position = Vector2( -446, 0 )
